[package]
name = "libsqltui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
dashmap = "6.1.0"
dialoguer = "0.11.0"
dirs = "5.0.1"
dotenv = "0.15.0"
futures = "0.3.31"
ratatui = { version = "0.29.0", features = ["crossterm"] }
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tungstenite = "0.24.0"
unicode-width = "0.2.0"
url = "2.5.4"
